<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:paddingTop="@dimen/details_section_spacing"
    android:paddingBottom="@dimen/details_section_spacing">

    <ImageView
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_wind"
        android:layout_width="@dimen/details_section_icon_size"
        android:layout_height="@dimen/details_section_icon_size"
        android:layout_gravity="top" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/details_section_icon_spacing"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_section_title_margin"
            android:text="@string/wind"
            android:textSize="@dimen/subtitle_text_size" />

        <TextView
            android:id="@+id/txt_wind_gust_speed"
            tools:text="28.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorDefault"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gust_speed"
            android:textSize="@dimen/subtitle_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_wind_speed"
            tools:text="28.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorDefault"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="@dimen/subtitle_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_wind_direction"
            tools:text="NE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorDefault"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:textSize="@dimen/subtitle_text_size" />

    </LinearLayout>

</LinearLayout>