<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/details_section_spacing"
        android:paddingBottom="@dimen/details_section_spacing">

        <ImageView
            app:srcCompat="@drawable/ic_temp"
            android:scaleType="centerInside"
            android:layout_width="@dimen/details_section_icon_size"
            android:layout_height="@dimen/details_section_icon_size"
            android:layout_gravity="top" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/details_section_icon_spacing"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_section_title_margin"
                android:text="@string/temperature"
                android:textSize="@dimen/subtitle_text_size" />

            <TextView
                android:id="@+id/txt_temp_average"
                tools:text="28.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorDefault"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textSize="@dimen/subtitle_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_temp_max"
                tools:text="28.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorDefault"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textSize="@dimen/subtitle_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_temp_min"
                tools:text="NE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorDefault"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textSize="@dimen/subtitle_text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/details_section_icon_size"
            android:layout_height="@dimen/details_section_icon_size"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="@dimen/details_section_icon_spacing"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_temp_app_max"
                tools:text="28.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorDefault"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apparent_max"
                android:textSize="@dimen/subtitle_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_temp_app_min"
                tools:text="28.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorDefault"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apparent_min"
                android:textSize="@dimen/subtitle_text_size" />

        </LinearLayout>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />

    </LinearLayout>

</LinearLayout>